<?xml version="1.0"?>
<package format="3">
  <name>usf_robot</name>
  <version>0.0.0</version>
  <description>ROS2 package for controlling a 5-DOF robot with Pololu Micro Maestro 6-channel controller and 8BitDo joystick.</description>
  <maintainer email="fwinters@usf.edu">cyborg</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>joy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
